...
        }
    } else {
        LazyColumn(
            modifier = Modifier
                .fillMaxSize()
                .padding(dimensionResource(R.dimen.padding_small))
                .testTag("product_form")
                .semantics {
                    contentDescription = formDescription
                    stateDescription = if (uiState.isFormValid) 
                        formValidStateDescription 
                    else 
                        formErrorsStateDescription
...

            item {
                Button(
                    onClick = onSave,
                    modifier = Modifier
                        .fillMaxWidth()
                        .testTag("save_product_button")
                        .semantics {
                            contentDescription = saveButtonDescription
                            stateDescription = if (uiState.isFormValid) 
                                buttonEnabledStateDescription 
                            else 
                                buttonDisabledStateDescription
...
